# projeto-fastapi

./: Dockerfile  alembic.ini  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml  requirements.txt  teste.py
.github/workflows/: build-deploy.yml
alembic/versions/: 2ebe54c8a1e2_add_user_table.py  52161eaa5acf_create_posts_table.py  5ae258c40c44_add_foreign_key_to_posts_table.py  6890c7f5a84c_auto_vote.py  97b8db91f62f_add_content_column_to_posts_table.py  ba125555a7e2_add_last_few_columns_to_post_table.py  fd64ac57b74d_add_phone_number.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
tests/: conftest.py  database.py  test_posts.py  test_users.py  test_votes.py
